<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
    	android:text="@string/test_label" 
    	android:textSize="20dip"
    	android:id="@+id/test_button">
    </Button>
    
	<Button
         android:id="@+id/learn_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/learn_label"
         android:textSize="20dip">
	</Button>
	

</LinearLayout>