<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button
        android:id="@+id/one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_label"
        android:textSize="20dip" >

    </Button>
    
	<Button
	    android:id="@+id/two_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/two_label"
	    android:textSize="20dip" >

	</Button>
	
	<Button
	    android:id="@+id/three_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/three_label"
	    android:textSize="20dip" >

	</Button>
</LinearLayout>